added the docker file