@@ -5,13 +5,12 @@ import com.example.messageservice.dto.MessageResponseDTO;
 import com.example.messageservice.entity.Message;
 import com.example.messageservice.kafka.MessageProducer;
 import com.example.messageservice.repository.MessageRepository;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
@@ -23,8 +22,14 @@ public class MessageServiceImpl implements MessageService {
     @Override
     public MessageResponseDTO sendMessage(MessageRequestDTO request) {
 
+        String chatId = generateChatId(
+                request.getSenderId(),
+                request.getReceiverId()
+        );
+
         Message message = Message.builder()
-                .chatId(request.getChatId())
+                .id(Long.valueOf(UUID.randomUUID().toString())) // ✅ unique ID
+                .chatId(chatId)
                 .senderId(request.getSenderId())
                 .receiverId(request.getReceiverId())
                 .content(request.getContent())
@@ -32,20 +37,31 @@ public class MessageServiceImpl implements MessageService {
                 .status("SENT")
                 .build();
 
-        Message saved = repository.save(message);
+        // ❌ NO DB SAVE HERE
+        producer.sendMessage(message);
 
-        producer.sendMessage(saved);
+        return mapToDTO(message); // immediate response
+    }
 
-        return mapToDTO(saved);
+    private String generateChatId(String user1, String user2) {
+
+        user1 = user1.trim();
+        user2 = user2.trim();
+
+        return user1.compareTo(user2) < 0
+                ? user1 + "_" + user2
+                : user2 + "_" + user1;
     }
 
     @Override
-    public List<MessageResponseDTO> getMessages(String chatId) {
+    public List<MessageResponseDTO> getConversation(String user1, String user2) {
+
+        String chatId = generateChatId(user1, user2);
 
         return repository.findByChatIdOrderByTimestampAsc(chatId)
                 .stream()
                 .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private MessageResponseDTO mapToDTO(Message message) {
